@@ -1,3 +1,7 @@
+2021-04-25  Omar Polo  <op@omarpolo.com>
+
+	* server.c (open_dir): sort the auto index alphabetically
+
 2021-04-21  Omar Polo  <op@omarpolo.com>
 
 	* mime.c (load_default_mime): use `text/x-patch' for .patch and .diff files
